--- a/client/src/assets/styles/_hoverinfobox.scss
+++ b/client/src/assets/styles/_hoverinfobox.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 23px;
   width: 23px;
   height: 23px;
   border-radius: 50%;
@@ -9,6 +10,8 @@
   color: theme_color("light");
   font-family: $font-family-BasierCircle-Bold;
   cursor: pointer;
+  margin: 2px;
+  z-index: 1;
 }
 
 .info-box-label {
